--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,69 @@
 body {
-    font-family: "Roboto", sans-serif;
-    color: #434455; 
-    background-color: #FFFFFF;
+  font-family: "Roboto", sans-serif;
+  color: #434455;
+  background-color: #ffffff;
 }
 
-h1,h2,h3,h4,h5,h6,p{
-    margin-top: 0;
-    margin-bottom: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
 }
-ul{
-    margin: 0;
-    padding-left: 0;
-    list-style: none;
+ul {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
 }
-a{
+a {
   text-decoration: none;
 }
-img{
-    display: block;
+img {
+  display: block;
 }
 
-.visually-hidden { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden; }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
-
-
-.container{
+.container {
   max-width: 320px;
   padding: 0 16px;
   margin: 0 auto;
 }
 
-
-@media (min-width: 768px){
-  .container{
+@media (min-width: 768px) {
+  .container {
     max-width: 768px;
   }
-
 }
 
-@media (min-width: 1158px){
-  .container{
+@media (min-width: 1158px) {
+  .container {
     max-width: 1158px;
     padding: 0 15px;
   }
 }
-@media (max-width: 767px){
-  .header{
+@media (max-width: 767px) {
+  .header {
     padding: 16px 0;
-
   }
 }
 
-.header-container{
+.header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -64,26 +76,26 @@ img{
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
-  margin-right: 76px
+  margin-right: 76px;
 }
 
 .logo-span {
   color: #2e2f42;
 }
-.nav-menu{
+.nav-menu {
   display: none;
 }
 
-@media (min-width: 768px){
-  .nav-menu{
+@media (min-width: 768px) {
+  .nav-menu {
     display: flex;
     gap: 40px;
   }
-  .nav{
+  .nav {
     display: flex;
     align-items: center;
   }
-  .nav-menu-item{
+  .nav-menu-item {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -91,68 +103,68 @@ img{
     padding: 24px 0;
     display: block;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.cover{
-  position: relative;
-  color: #404bbf;
-}
+  }
+  .cover {
+    position: relative;
+    color: #404bbf;
+  }
 
-.cover::after{
-  content: '';
-  width: 100%;
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  height: 4px;
-  background-color: #404bbf;
-  border-radius: 2px;
+  .cover::after {
+    content: "";
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+  }
 }
-}
-.address-list{
+.address-list {
   display: none;
 }
 
-@media (min-width: 768px){
-  .address-list{
+@media (min-width: 768px) {
+  .address-list {
     display: flex;
     flex-direction: column;
     gap: 12px;
   }
-  address{
+  address {
     font-style: normal;
     color: #434455;
-}
-.menu-address{
-  color: #434455;
-  font-size: 12px;
-  line-height: 117%;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  }
+  .menu-address {
+    color: #434455;
+    font-size: 12px;
+    line-height: 117%;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-.menu-address:hover,
-.menu-address:focus {
-  color: #404bbf;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .menu-address:hover,
+  .menu-address:focus {
+    color: #404bbf;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
-}
-@media (min-width: 1158px){
-  .address-list{
+@media (min-width: 1158px) {
+  .address-list {
     flex-direction: row;
     gap: 40px;
   }
-  .menu-address{
+  .menu-address {
     font-size: 16px;
     line-height: 1.5px;
   }
 }
-.menu-btn{
+.menu-btn {
   border: none;
   background-color: transparent;
 }
-@media (min-width: 768px){
-  .menu-btn{
+@media (min-width: 768px) {
+  .menu-btn {
     display: none;
   }
 }
@@ -172,12 +184,12 @@ img{
   transform: translate(100%);
 }
 
-.mobile-menu.is-open{
+.mobile-menu.is-open {
   transform: translate(0%);
 }
 .modal-close-btn {
   border-radius: 50%;
-  border-color: #E7E9FC;
+  border-color: #e7e9fc;
   stroke-width: 1px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   position: absolute;
@@ -190,8 +202,9 @@ img{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #E7E9FC;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #e7e9fc;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mob-nav-menu {
@@ -202,10 +215,10 @@ img{
   font-size: 36px;
   line-height: 111%;
   letter-spacing: 0.02em;
-  color: #2E2F42;
+  color: #2e2f42;
 }
 
-.mob-nav-item:not(:last-child){
+.mob-nav-item:not(:last-child) {
   margin-bottom: 40px;
 }
 .mob-address-list {
@@ -218,7 +231,7 @@ img{
   letter-spacing: 0.02em;
   color: #434455;
 }
-.mob-contact:not(:last-child){
+.mob-contact:not(:last-child) {
   margin-bottom: 24px;
 }
 .mob-icon-list {
@@ -226,7 +239,7 @@ img{
   gap: 40px;
 }
 .active {
-  color: #404BBF;
+  color: #404bbf;
 }
 .mob-icon-team-media {
   width: 40px;
@@ -236,7 +249,7 @@ img{
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: #4D5AE5;
+  background-color: #4d5ae5;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -245,7 +258,641 @@ img{
   fill: #fff;
 }
 
-
-
 /* -----hero-top section------ */
 
+@media (max-width: 768px) {
+  .top-section {
+  }
+  .container-mob-top {
+  }
+  .top-title {
+  }
+  .order-button {
+  }
+}
+
+.top-section {
+  background-color: #2e2f42;
+  text-align: center;
+  padding: 72px 0;
+  margin: 0 auto;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero/mob-bg.jpg);
+}
+@media (min-device-pixel-ratio: 2),
+	(min-resolution: 192dpi),
+	(min-resolution: 2dppx) {
+	.top-section {
+	background-image: linear-gradient(
+    rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)
+   ), url(../images/hero/mob-bg@2x.jpg);
+	}
+	}
+.top-title {
+  font-size: 36px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  max-width: 218px;
+  margin: 0 auto;
+  margin-bottom: 72px;
+}
+
+.order-button {
+  background-color: #4d5ae5;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  height: 56px;
+  min-width: 169px;
+  border: none;
+  border-radius: 4px;
+  display: block;
+  margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.order-button:hover {
+  background-color: #404bbf;
+}
+
+.order-button:focus {
+  background-color: #404bbf;
+}
+@media (min-width: 768px){
+  .top-section {
+    padding: 112px 0;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero/tablet-bg.jpg);
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .top-section {
+    background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+     ), url(../images/hero/tablet-bg@2x.jpg);
+    }
+    }
+    .top-title{
+      font-size: 56px;
+      max-width: 496px;
+      margin-bottom: 36px;
+    }
+}
+
+
+@media (min-width: 1158px){
+  .top-section {
+    padding: 188px 0;
+    max-width: 1440px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero/desk-bg.jpg);
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .top-section {
+    background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+     ), url(../images/hero/desk-bg@2x.jpg);
+    }
+    }
+    .top-title{
+      margin-bottom: 48px;
+    }
+}
+.section{
+ padding: 96px 0;
+}
+
+@media (min-width: 1158px){
+  .section{
+    padding: 120px 0;
+   }
+}
+.icon-advantages{
+  display: none;
+}
+@media (min-width: 1158px){
+  .icon-advantages{ 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #8E8F99;
+    border-radius: 4px;
+    width: 264px;
+    height: 112px;
+    background-color: #F4F4FD;
+    margin-bottom: 8px;
+}
+}
+
+.advantages{
+
+font-weight: 700;
+font-size: 36px;
+line-height: 111%;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2E2F42;
+margin-bottom: 8px;
+}
+
+.title-advantages{
+
+font-weight: 500;
+font-size: 16px;
+line-height: 150%;
+letter-spacing: 0.02em;
+color: #434455;
+}
+
+@media (min-width: 768px){
+  .advantages{
+    text-align: left;
+  }
+}
+
+@media (min-width: 1158px){
+  .advantages{
+    font-size: 20px;
+    font-weight: 500;
+  }
+  .title-advantages{
+    font-weight: 400;
+  }
+}
+
+@media (max-width: 767px){
+  .advantages-item:not(:last-child){
+    margin-bottom: 72px;
+  }
+}
+
+@media (min-width: 768px){
+  .advantges-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+  }
+  .advantages-item{
+    width: calc((100% - 24px) / 2);
+  }
+}
+
+
+@media (min-width: 1158px){
+  .advantges-list{
+    flex-wrap: nowrap;
+    gap: 24px;
+  }
+  .advantages-item{
+    width: calc((100% - 72px) / 4);
+  }
+}
+
+.team-box{
+  background-color: #F4F4FD;
+}
+.tim-nameinfo{
+  padding: 32px 0;
+  text-align: center;
+}
+
+.title{
+
+font-weight: 700;
+font-size: 36px;
+line-height: 111%;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2E2F42;
+margin-bottom: 72px;
+}
+
+.icon-list {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+  justify-content: center;
+  margin-top: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.icon-team-media {
+  width: 40px;
+  height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4D5AE5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.icon-link:hover,
+.icon-link:focus {
+  background-color: #404bbf;
+background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-link-footer:hover {
+  background-color: #31d0aa;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.icon-team {
+    fill: #f4f4fd
+}
+
+
+.team-card img {
+  width: 100%; 
+  height: auto; 
+}
+
+
+
+.team-card{
+  background-color: #FFFFFF;
+  border-radius: 0 0 4px 4px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.team-name{
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+  text-align: center;
+  
+}
+
+
+.team-name-title{
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+@media (max-width:767px){
+  .team-container{
+    max-width: 296px;
+  }
+
+  .team-card:not(:last-child){
+    margin-bottom: 72px;
+  }
+}
+
+@media (min-width:768px){
+  .team-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+  }
+  .team-card{
+    width: calc((100% - 24px ) / 2 );
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1157px){
+  .team-container{
+    max-width: 584px;
+  }
+}
+
+@media (min-width:1158px){
+  .team-list{
+    flex-wrap: nowrap;
+    gap: 24px;
+
+  }
+  .team-card{
+    width: calc((100% - 72px) / 4);
+  }
+}
+
+.porfolio-wrap{
+  padding: 32px 16px;
+  border-bottom: 1px solid #E7E9FC;
+border-left: 1px solid #E7E9FC;
+border-right: 1px solid #E7E9FC;
+}
+
+
+
+.tim-nameinfo{
+  padding: 32px 0;
+
+}
+
+.portfolio-box h2 {
+  text-align: center; 
+  margin-bottom: 72px;
+}
+
+.team-list .title-advantages{
+  text-align: center;
+}
+
+
+
+.portfolio-item{
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+  0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-wrap-wrap{
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-text{
+  position: absolute;
+  top: 0;
+  background-color: #4d5ae5;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  height: 100%;
+  padding-top: 40px;
+  padding-right: 32px;
+  padding-bottom: 40px;
+  padding-left: 32px;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover .portfolio-text{
+  transform: translateY(0);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.porfolio-wrap{
+  border: 1px solid #e7e9fc;
+  padding: 32px 16px;
+  border-top: none;
+  width: 360px;
+}
+
+.portfolio-box img {
+  width: 100%; 
+  height: auto; 
+}
+
+
+
+.title{
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 72px;
+  
+  
+}
+
+.title-portfolio{
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+@media (max-width: 767px){
+  .portfolio-item:not(:last-child){
+    margin-bottom: 48px ;
+  }
+}
+
+@media (min-width: 768px){
+  .portfolio-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+  }
+  .portfolio-item{
+    width: calc((100% - 24px) / 2);
+  }
+}
+
+@media (min-width: 1158px){
+  .portfolio-list{
+    gap: 48px 24px;
+  }
+  .portfolio-item{
+    width: calc((100% - 48px) / 3);
+  }
+}
+
+
+.footer{
+  background-color: #2e2f42;
+  padding: 96px 0 96px 0;  
+}
+@media (min-width: 1158px){
+  .footer{
+    padding: 100px 0 100px 0;
+  }
+}
+.txt-footer{
+  line-height: 1.5;
+  color: #F4F4FD;
+  letter-spacing: 0.02em;
+  max-width: 264px;
+}
+
+.logo-footer{
+  color: #f4f4fd;
+}
+
+.logo-brand-footer{
+  margin-bottom: 16px;
+  display: inline-block;
+}
+
+.icon-footer{
+  fill: #f4f4fd;
+
+}
+
+
+.icon-link-footer{
+  width: 100%;
+  height: 100%;
+  background-color: #4D5AE5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-link-footer:hover{
+  background-color: #31D0AA;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-link-footer:focus{
+  background-color: #31d0aa;
+}
+
+.icon-list-footer{
+  display: flex;
+  gap: 16px;
+}
+
+
+.text-footer-media{
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+.subscribe-title {
+  display: block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.subscribe-input {
+  padding: 8px 16px;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  padding-left: 16px;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: transparent;
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.subscribe-input::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+
+
+.subscribe-input:focus-within {
+  border-color: #4d5ae5;
+}
+.subscribe-button {
+  border-radius: 4px;
+  padding: 8px 24px;
+  min-width: 165px;
+  height: 40px;
+  padding: 8px 24px;
+  background: #4d5ae5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
+.subscribe-button:hover,
+  .subscribe-button:focus {
+    background-color: #404bbf;
+  }
+  .subscribe-icon {
+    fill: #fff;
+    margin-left: 16px;
+  }
+
+  @media (max-width:767px){
+    .first-footer{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 72px;
+    }
+    .text-footer-media{
+      text-align: center;
+    }
+    .icon-list-footer{
+      justify-content: center;
+    }
+    .footer-media{
+      margin-bottom: 72px;
+    }
+    .subscribe-title{
+      text-align: center;
+  
+    }
+    .subscribe-input{
+      width: 288px;
+
+    }
+    .subscribe-form{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .subscribe-button{
+      margin-top: 24px;
+    }
+  }
